// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Props Matches snapshot with custom props 1`] = `
<Dropdown
  ariaDescribedBy={null}
  ariaLabel="React Simple Dropdown"
  ariaLabelledBy={null}
  centerText={false}
  className="custom-class"
  contentClassName={null}
  disabled={true}
  height={null}
  hideArrow={false}
  id="dropdown"
  maxContentHeight={150}
  onChange={[Function]}
  openUp={false}
  options={
    Array [
      Object {
        "ariaLabel": "ariaLabel",
        "className": "className",
        "iconClass": "fab fa-js-square",
        "title": "title",
        "value": "1",
      },
      Object {
        "ariaLabel": "ariaLabel",
        "className": "className",
        "iconClass": "fab fa-js-square",
        "title": "title",
        "value": "2",
      },
      Object {
        "ariaLabel": "ariaLabel",
        "className": "className",
        "iconClass": "fab fa-js-square",
        "title": "title",
        "value": "3",
      },
    ]
  }
  pageKeyTraverseSize={10}
  placeholder="Custom Placeholder..."
  searchable={false}
  selectedValueClassName={null}
  style={Object {}}
  width={400}
>
  <div
    className="dropdown custom-class css-w4jram"
    id="dropdown"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="dropdown-selector css-q0xgr4"
    >
      <span
        className="dropdown-selector-search css-1l6e6we"
      >
        <input
          aria-activedescendant="dropdown_list_-1"
          aria-controls="dropdown_list"
          aria-describedby={null}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-hidden={true}
          aria-label="React Simple Dropdown"
          aria-labelledby={null}
          autoComplete="off"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={true}
          role="combobox"
          value=""
        />
      </span>
      <span
        className="dropdown-selector-placeholder css-nctil"
      >
        Custom Placeholder...
      </span>
      <Arrow
        dropdownOpen={false}
        getStyle={[Function]}
        hideArrow={false}
        searchable={false}
      >
        <div
          className="css-1h2654e"
        >
          <ChevronDown>
            <svg
              className="feather feather-chevron-down"
              fill="none"
              height="16"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </ChevronDown>
        </div>
      </Arrow>
    </div>
    <div
      id="dropdown_list"
      role="listbox"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
          "width": 0,
        }
      }
    >
      <div
        aria-selected={false}
        id="dropdown_list_0"
        key="dropdown_list_0"
        role="option"
      />
      <div
        aria-selected={false}
        id="dropdown_list_1"
        key="dropdown_list_1"
        role="option"
      />
      <div
        aria-selected={false}
        id="dropdown_list_2"
        key="dropdown_list_2"
        role="option"
      />
    </div>
    <ul
      className="dropdown-selector-content css-m2fyt8"
    >
      <OptionItem
        index={0}
        key="1"
        onOptionClicked={[Function]}
        option={
          Object {
            "ariaLabel": "ariaLabel",
            "className": "className",
            "iconClass": "fab fa-js-square",
            "title": "title",
            "value": "1",
          }
        }
        optionClass="className css-1qx3k0g"
      >
        <div
          aria-label="ariaLabel"
          className="dropdown-option className css-1qx3k0g"
          onClick={[Function]}
          tabIndex={-1}
          title="title"
        >
          <i
            className="fab fa-js-square dropdown-option-icon"
          />
          1
        </div>
      </OptionItem>
      <OptionItem
        index={1}
        key="2"
        onOptionClicked={[Function]}
        option={
          Object {
            "ariaLabel": "ariaLabel",
            "className": "className",
            "iconClass": "fab fa-js-square",
            "title": "title",
            "value": "2",
          }
        }
        optionClass="className css-1qx3k0g"
      >
        <div
          aria-label="ariaLabel"
          className="dropdown-option className css-1qx3k0g"
          onClick={[Function]}
          tabIndex={-1}
          title="title"
        >
          <i
            className="fab fa-js-square dropdown-option-icon"
          />
          2
        </div>
      </OptionItem>
      <OptionItem
        index={2}
        key="3"
        onOptionClicked={[Function]}
        option={
          Object {
            "ariaLabel": "ariaLabel",
            "className": "className",
            "iconClass": "fab fa-js-square",
            "title": "title",
            "value": "3",
          }
        }
        optionClass="className css-1qx3k0g"
      >
        <div
          aria-label="ariaLabel"
          className="dropdown-option className css-1qx3k0g"
          onClick={[Function]}
          tabIndex={-1}
          title="title"
        >
          <i
            className="fab fa-js-square dropdown-option-icon"
          />
          3
        </div>
      </OptionItem>
    </ul>
  </div>
</Dropdown>
`;

exports[`Check Props Matches snapshot with default props 1`] = `
<Dropdown
  ariaDescribedBy={null}
  ariaLabel={null}
  ariaLabelledBy={null}
  centerText={false}
  contentClassName={null}
  disabled={false}
  height={null}
  hideArrow={false}
  id={null}
  maxContentHeight={150}
  onChange={[Function]}
  openUp={false}
  options={Array []}
  pageKeyTraverseSize={10}
  placeholder="Select ..."
  searchable={false}
  selectedValueClassName={null}
  style={Object {}}
  width={null}
>
  <div
    className="dropdown css-4a6799"
    id={null}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="dropdown-selector css-q0xgr4"
    >
      <span
        className="dropdown-selector-search css-1l6e6we"
      >
        <input
          aria-activedescendant="react_dropdown_aria_test_list_-1"
          aria-controls="react_dropdown_aria_test_list"
          aria-describedby={null}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-hidden={false}
          aria-label={null}
          aria-labelledby={null}
          autoComplete="off"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={true}
          role="combobox"
          value=""
        />
      </span>
      <span
        className="dropdown-selector-placeholder css-nctil"
      >
        Select ...
      </span>
      <Arrow
        dropdownOpen={false}
        getStyle={[Function]}
        hideArrow={false}
        searchable={false}
      >
        <div
          className="css-1h2654e"
        >
          <ChevronDown>
            <svg
              className="feather feather-chevron-down"
              fill="none"
              height="16"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </ChevronDown>
        </div>
      </Arrow>
    </div>
    <div
      id="react_dropdown_aria_test_list"
      role="listbox"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
          "width": 0,
        }
      }
    />
    <ul
      className="dropdown-selector-content css-m2fyt8"
    >
      <div
        className="dropdown-selector-content--empty"
      >
        <Inbox>
          <svg
            className="feather feather-chevron-down"
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="22 12 16 12 14 15 10 15 8 12 2 12"
            />
            <path
              d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
            />
          </svg>
        </Inbox>
        No data
      </div>
    </ul>
  </div>
</Dropdown>
`;

exports[`Check Props Matches snapshot with grouped options 1`] = `
<Dropdown
  ariaDescribedBy={null}
  ariaLabel={null}
  ariaLabelledBy={null}
  centerText={false}
  contentClassName={null}
  disabled={false}
  height={null}
  hideArrow={false}
  id={null}
  maxContentHeight={150}
  onChange={[Function]}
  openUp={false}
  options={
    Array [
      Object {
        "groupOptions": Array [
          Object {
            "value": "1",
          },
          Object {
            "value": "2",
          },
          Object {
            "value": "3",
          },
          Object {
            "value": "4",
          },
          Object {
            "value": "5",
          },
          Object {
            "value": "6",
          },
          Object {
            "value": "7",
          },
          Object {
            "value": "8",
          },
          Object {
            "value": "9",
          },
          Object {
            "value": "10",
          },
        ],
        "label": "numbers",
      },
      Object {
        "groupOptions": Array [
          Object {
            "value": "a",
          },
          Object {
            "value": "b",
          },
          Object {
            "value": "c",
          },
          Object {
            "value": "d",
          },
          Object {
            "value": "e",
          },
          Object {
            "value": "f",
          },
          Object {
            "value": "g",
          },
          Object {
            "value": "h",
          },
          Object {
            "value": "i",
          },
          Object {
            "value": "j",
          },
        ],
        "label": "letters",
      },
    ]
  }
  pageKeyTraverseSize={10}
  placeholder="Select ..."
  searchable={false}
  selectedValueClassName={null}
  style={Object {}}
  width={null}
>
  <div
    className="dropdown css-4a6799"
    id={null}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="dropdown-selector css-q0xgr4"
    >
      <span
        className="dropdown-selector-search css-1l6e6we"
      >
        <input
          aria-activedescendant="react_dropdown_aria_test_list_-1"
          aria-controls="react_dropdown_aria_test_list"
          aria-describedby={null}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-hidden={false}
          aria-label={null}
          aria-labelledby={null}
          autoComplete="off"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={true}
          role="combobox"
          value=""
        />
      </span>
      <span
        className="dropdown-selector-placeholder css-nctil"
      >
        Select ...
      </span>
      <Arrow
        dropdownOpen={false}
        getStyle={[Function]}
        hideArrow={false}
        searchable={false}
      >
        <div
          className="css-1h2654e"
        >
          <ChevronDown>
            <svg
              className="feather feather-chevron-down"
              fill="none"
              height="16"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </ChevronDown>
        </div>
      </Arrow>
    </div>
    <div
      id="react_dropdown_aria_test_list"
      role="listbox"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
          "width": 0,
        }
      }
    >
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_0"
        key="react_dropdown_aria_test_list_0"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_1"
        key="react_dropdown_aria_test_list_1"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_2"
        key="react_dropdown_aria_test_list_2"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_3"
        key="react_dropdown_aria_test_list_3"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_4"
        key="react_dropdown_aria_test_list_4"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_5"
        key="react_dropdown_aria_test_list_5"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_6"
        key="react_dropdown_aria_test_list_6"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_7"
        key="react_dropdown_aria_test_list_7"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_8"
        key="react_dropdown_aria_test_list_8"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_9"
        key="react_dropdown_aria_test_list_9"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_10"
        key="react_dropdown_aria_test_list_10"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_11"
        key="react_dropdown_aria_test_list_11"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_12"
        key="react_dropdown_aria_test_list_12"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_13"
        key="react_dropdown_aria_test_list_13"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_14"
        key="react_dropdown_aria_test_list_14"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_15"
        key="react_dropdown_aria_test_list_15"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_16"
        key="react_dropdown_aria_test_list_16"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_17"
        key="react_dropdown_aria_test_list_17"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_18"
        key="react_dropdown_aria_test_list_18"
        role="option"
      />
      <div
        aria-selected={false}
        id="react_dropdown_aria_test_list_19"
        key="react_dropdown_aria_test_list_19"
        role="option"
      />
    </div>
    <ul
      className="dropdown-selector-content css-m2fyt8"
    >
      <OptionGroup
        focusedIndex={-1}
        getStyle={[Function]}
        key="numbers"
        onOptionClicked={[Function]}
        optionGroup={
          Object {
            "groupOptions": Array [
              Object {
                "value": "1",
              },
              Object {
                "value": "2",
              },
              Object {
                "value": "3",
              },
              Object {
                "value": "4",
              },
              Object {
                "value": "5",
              },
              Object {
                "value": "6",
              },
              Object {
                "value": "7",
              },
              Object {
                "value": "8",
              },
              Object {
                "value": "9",
              },
              Object {
                "value": "10",
              },
            ],
            "label": "numbers",
          }
        }
        startingIndex={0}
      >
        <div
          className="css-dckqxd"
        >
          <div
            className="css-1q3omhu"
          >
            <div>
              NUMBERS
               |  
            </div>
            <div>
              10
            </div>
          </div>
          <OptionItem
            index={0}
            key="1"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "1",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              1
            </div>
          </OptionItem>
          <OptionItem
            index={1}
            key="2"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "2",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              2
            </div>
          </OptionItem>
          <OptionItem
            index={2}
            key="3"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "3",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              3
            </div>
          </OptionItem>
          <OptionItem
            index={3}
            key="4"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "4",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              4
            </div>
          </OptionItem>
          <OptionItem
            index={4}
            key="5"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "5",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              5
            </div>
          </OptionItem>
          <OptionItem
            index={5}
            key="6"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "6",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              6
            </div>
          </OptionItem>
          <OptionItem
            index={6}
            key="7"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "7",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              7
            </div>
          </OptionItem>
          <OptionItem
            index={7}
            key="8"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "8",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              8
            </div>
          </OptionItem>
          <OptionItem
            index={8}
            key="9"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "9",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              9
            </div>
          </OptionItem>
          <OptionItem
            index={9}
            key="10"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "10",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              10
            </div>
          </OptionItem>
          <div
            className="css-iryzig"
          />
        </div>
      </OptionGroup>
      <OptionGroup
        focusedIndex={-1}
        getStyle={[Function]}
        key="letters"
        onOptionClicked={[Function]}
        optionGroup={
          Object {
            "groupOptions": Array [
              Object {
                "value": "a",
              },
              Object {
                "value": "b",
              },
              Object {
                "value": "c",
              },
              Object {
                "value": "d",
              },
              Object {
                "value": "e",
              },
              Object {
                "value": "f",
              },
              Object {
                "value": "g",
              },
              Object {
                "value": "h",
              },
              Object {
                "value": "i",
              },
              Object {
                "value": "j",
              },
            ],
            "label": "letters",
          }
        }
        startingIndex={10}
      >
        <div
          className="css-dckqxd"
        >
          <div
            className="css-1q3omhu"
          >
            <div>
              LETTERS
               |  
            </div>
            <div>
              10
            </div>
          </div>
          <OptionItem
            index={10}
            key="a"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "a",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              a
            </div>
          </OptionItem>
          <OptionItem
            index={11}
            key="b"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "b",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              b
            </div>
          </OptionItem>
          <OptionItem
            index={12}
            key="c"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "c",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              c
            </div>
          </OptionItem>
          <OptionItem
            index={13}
            key="d"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "d",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              d
            </div>
          </OptionItem>
          <OptionItem
            index={14}
            key="e"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "e",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              e
            </div>
          </OptionItem>
          <OptionItem
            index={15}
            key="f"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "f",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              f
            </div>
          </OptionItem>
          <OptionItem
            index={16}
            key="g"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "g",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              g
            </div>
          </OptionItem>
          <OptionItem
            index={17}
            key="h"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "h",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              h
            </div>
          </OptionItem>
          <OptionItem
            index={18}
            key="i"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "i",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              i
            </div>
          </OptionItem>
          <OptionItem
            index={19}
            key="j"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "j",
              }
            }
            optionClass="css-1qx3k0g"
          >
            <div
              className="dropdown-option css-1qx3k0g"
              onClick={[Function]}
              tabIndex={-1}
            >
              j
            </div>
          </OptionItem>
          <div
            className="css-iryzig"
          />
        </div>
      </OptionGroup>
    </ul>
  </div>
</Dropdown>
`;
